--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-scripts": "2.1.1",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "thunk": "0.0.1",
     "uuid": "^3.3.2"
   },
   "scripts": {
